--- a/app/src/main/res/layout/city_list_group_item.xml
+++ b/app/src/main/res/layout/city_list_group_item.xml
@@ -7,7 +7,10 @@
     android:background="@android:color/white"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="@dimen/text_margin">
+    android:paddingLeft="50dp"
+    android:paddingTop="@dimen/text_margin"
+    android:paddingRight="@dimen/text_margin"
+    android:paddingBottom="@dimen/text_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
