--- a/app/src/main/res/layout/download_dialog.xml
+++ b/app/src/main/res/layout/download_dialog.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="@android:color/white"
     android:orientation="vertical"
-    android:padding="@dimen/text_margin"
     android:theme="@style/AppTheme">
 
     <ImageView
@@ -13,13 +12,15 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_gravity="right|top"
-        android:src="@drawable/ic_close_black_24dp" />
+        android:src="@drawable/ic_close_black_24dp"
+        android:visibility="gone" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
+        android:layout_gravity="left|center_vertical"
+        android:background="@color/colorAccent"
+        android:gravity="left|center_vertical"
         android:orientation="horizontal">
 
         <TextView
@@ -36,22 +37,75 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:text="Download the latest verison of Combatemic"
+            android:text="Combatemic"
             android:textColor="@android:color/white"
-            android:textSize="16dp" />
+            android:textSize="26dp" />
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/dialogButtonOK"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/button"
-        android:backgroundTint="@color/colorBackground"
-        android:drawableLeft="@drawable/ic_arrow_downward_black_24dp"
-        android:padding="10dp"
-        android:text="Download"
-        android:textColor="@android:color/white" />
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:text="The new Combatemic app is here"
+            android:textColor="@android:color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/upgrade_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center_vertical"
+            android:text="Upgrade to version"
+            android:textColor="@android:color/black"
+            android:textSize="15dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/dialogButtonOK"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="25dp"
+            android:padding="10dp"
+            android:text="No Thanks"
+            android:textAllCaps="true"
+            android:textColor="@color/colorBackground"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/dialogIgnore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="10dp"
+            android:text="GET the app"
+            android:textAllCaps="true"
+            android:textColor="@color/colorBackground"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
 </LinearLayout>
