--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,6 +7,7 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:orderInCategory="100"
         android:title="@string/title_notification"
+        app:actionLayout="@layout/notification_dot"
         app:showAsAction="always" />
 
     <item
