--- a/app/src/main/res/layout/top_district.xml
+++ b/app/src/main/res/layout/top_district.xml
@@ -124,6 +124,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
+                                android:drawableEnd="@drawable/ic_info_black_24dp"
                                 android:ellipsize="end"
                                 android:gravity="center"
                                 android:maxLines="1"
@@ -188,6 +189,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
+                                android:drawableEnd="@drawable/ic_info_black_24dp"
                                 android:ellipsize="end"
                                 android:gravity="center"
                                 android:maxLines="1"
@@ -253,6 +255,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
+                                android:drawableEnd="@drawable/ic_info_black_24dp"
                                 android:ellipsize="end"
                                 android:gravity="center"
                                 android:maxLines="1"
@@ -317,6 +320,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
+                                android:drawableEnd="@drawable/ic_info_black_24dp"
                                 android:ellipsize="end"
                                 android:gravity="center"
                                 android:maxLines="1"
@@ -381,6 +385,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
+                                android:drawableEnd="@drawable/ic_info_black_24dp"
                                 android:ellipsize="end"
                                 android:gravity="center"
                                 android:maxLines="1"
