--- a/app/src/main/res/drawable/ic_file_download_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_file_download_black_24dp.xml
@@ -6,5 +6,5 @@
     android:viewportHeight="24.0">
     <path
         android:fillColor="#101947"
-        android:pathData="M20,12l-1.41,-1.41L13,16.17V4h-2v12.17l-5.58,-5.59L4,12l8,8 8,-8z" />
+        android:pathData="M19,9h-4V3H9v6H5l7,7 7,-7zM5,18v2h14v-2H5z" />
 </vector>
