--- a/app/src/main/res/layout/fragment_state_details_list.xml
+++ b/app/src/main/res/layout/fragment_state_details_list.xml
@@ -140,8 +140,8 @@
                     android:layout_gravity="center"
                     android:layout_weight="0.05"
                     android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
-                    app:drawableTint="@color/colorBackground"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    app:drawableTint="@color/colorBackground" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -151,25 +151,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@android:color/white"
-            card_view:cardCornerRadius="3dp"
-            card_view:cardElevation="5dp"
-            card_view:cardMaxElevation="10dp">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/text_margin"
-                app:layoutManager="LinearLayoutManager"
-                tools:context="live.combatemic.app.StateDetailsFragment"
-                tools:listitem="@layout/state_name_list_fragment" />
-
-        </androidx.cardview.widget.CardView>
+        <include layout="@layout/other_states" />
 
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
