--- a/app/src/main/res/layout/fragment_zone_list2.xml
+++ b/app/src/main/res/layout/fragment_zone_list2.xml
@@ -11,11 +11,11 @@
         android:id="@+id/count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="5dp"
         app:cardBackgroundColor="@color/red_zone">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/location_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -26,42 +26,42 @@
 
             <TextView
                 android:id="@+id/total_count"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.1"
-                android:text="33"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
+                android:gravity="center"
+                android:text="33333"
                 android:textColor="@android:color/black"
                 android:textSize="20dp" />
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.8"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@id/search_button"
+                android:layout_toEndOf="@id/total_count"
                 android:text="Containment zone that were identified"
                 android:textColor="@android:color/black"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.1"
-                android:orientation="horizontal">
 
-                <ImageButton
-                    android:id="@+id/search_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@drawable/ic_search_black_24dp" />
-            </LinearLayout>
-        </LinearLayout>
+            <ImageButton
+                android:id="@+id/search_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_search_black_24dp" />
+        </RelativeLayout>
 
         <include
             android:id="@+id/search_bar_layout"
             layout="@layout/search_bar"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
     </androidx.cardview.widget.CardView>
 
