--- a/app/src/main/res/layout/city_list_group_item.xml
+++ b/app/src/main/res/layout/city_list_group_item.xml
@@ -105,17 +105,56 @@
             android:textSize="15dp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/city_active"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
             android:layout_weight="0.5"
-            android:gravity="center_vertical"
-            android:text="20"
-            android:textColor="@color/textColorStatActive"
-            android:textSize="15dp"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/city_active"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:text="20"
+                android:textColor="@color/textColorStatActive"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="("
+                    android:textColor="@color/textColorStatActive" />
+
+                <live.combatemic.app.Common.CustomTextView
+                    android:id="@+id/today_active"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:drawableLeft="@drawable/ic_arrow_upward_black_24dp"
+                    android:gravity="center_vertical"
+                    android:text="100"
+                    android:textColor="@color/textColorStatActive"
+                    android:textSize="11dp"
+                    app:drawableTint="@color/textColorStatActive" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=")"
+                    android:textColor="@color/textColorStatActive" />
+
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
