--- a/app/src/main/res/layout/fragment_state_detail.xml
+++ b/app/src/main/res/layout/fragment_state_detail.xml
@@ -9,9 +9,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         card_view:cardCornerRadius="3dp"
         card_view:cardElevation="5dp"
-        android:layout_margin="10dp"
         card_view:cardMaxElevation="10dp">
 
         <LinearLayout
@@ -23,7 +23,7 @@
                 android:id="@+id/barchart"
                 android:name="live.combatemic.app.CityBarChart"
                 android:layout_width="match_parent"
-                android:layout_height="200dp" />
+                android:layout_height="wrap_content" />
 
             <include layout="@layout/state_detail" />
 
