--- a/app/src/main/res/layout/top_district.xml
+++ b/app/src/main/res/layout/top_district.xml
@@ -31,7 +31,7 @@
                 android:layout_gravity="right"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:text="Top 5 districts"
+                android:text="Top districts"
                 android:textColor="@color/textColorStatConfirmed"
                 android:textSize="20dp"
                 android:textStyle="bold" />
@@ -63,6 +63,8 @@
             android:scrollbars="none">
 
             <LinearLayout
+                android:id="@+id/card1"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -136,6 +138,8 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/card2"
+                    android:visibility="gone"
                     android:layout_width="150dp"
                     android:layout_height="170dp"
                     android:layout_gravity="center"
@@ -202,6 +206,8 @@
 
 
                 <LinearLayout
+                    android:id="@+id/card3"
+                    android:visibility="gone"
                     android:layout_width="150dp"
                     android:layout_height="170dp"
                     android:layout_gravity="center"
@@ -267,6 +273,8 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/card4"
+                    android:visibility="gone"
                     android:layout_width="150dp"
                     android:layout_height="170dp"
                     android:layout_gravity="center"
@@ -332,6 +340,8 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/card5"
+                    android:visibility="gone"
                     android:layout_width="150dp"
                     android:layout_height="170dp"
                     android:layout_gravity="center"
